ubah card project, komen kode buat isi resume
judul card project sama isi project diubah semestinya, komen kode isi resume bagian edukasi SMA, belum nemu kalimat

--- a/projects.html
+++ b/projects.html
@@ -62,12 +62,10 @@
                                         <div class="d-flex row g-0 align-items-center">
                                             <div class="col-md-8 p-2 col-12">
                                                 <div class="p-3">
-                                                    <h5 class="card-title fw-bolder">Card title</h5>
-                                                    <p class="card-text">This is a wider card with supporting text
-                                                        below
-                                                        as a natural lead-in to additional content. This content is
-                                                        a
-                                                        little bit longer.</p>
+                                                    <h5 class="card-title fw-bolder">Mondrian Art</h5>
+                                                    <p class="card-text">This project is an artwork inspired by a Dutch
+                                                        artist named Piet Mondrian. In this project, grids and columns
+                                                        are used in the work.</p>
                                                     <!-- <p class="card-text"><small class="text-body-secondary">Last
                                                             updated
                                                             3 mins ago</small>
@@ -75,7 +73,8 @@
                                                 </div>
                                             </div>
                                             <div class="d-flex col-md-4">
-                                                <img src="./images/Mondarian.png"  class="img-fluid" alt="Mondarian Project">
+                                                <img src="./images/Mondarian.png" class="img-fluid"
+                                                    alt="Mondarian Project">
                                             </div>
                                         </div>
                                     </div>
@@ -90,12 +89,10 @@
                                         <div class="row d-flex g-0 align-items-center">
                                             <div class="col-md-8 p-2 col-12">
                                                 <div class="p-2">
-                                                    <h5 class="card-title fw-bolder">Card title</h5>
-                                                    <p class="card-text">This is a wider card with supporting text
-                                                        below
-                                                        as a natural lead-in to additional content. This content is
-                                                        a
-                                                        little bit longer.</p>
+                                                    <h5 class="card-title fw-bolder">Tindog Apps</h5>
+                                                    <p class="card-text">This funny website project is a parody of the
+                                                        Tinder app called Tindog. Like Tinder, Tindog is also a dating
+                                                        app but only for dogs.</p>
                                                     <!-- <p class="card-text"><small class="text-body-secondary">Last
                                                             updated
                                                             3 mins ago</small> -->
@@ -103,8 +100,7 @@
                                                 </div>
                                             </div>
                                             <div class="d-flex col-md-4">
-                                                <img src="./images/tindogapp.png" class="img-fluid"
-                                                    alt="...">
+                                                <img src="./images/tindogapp.png" class="img-fluid" alt="...">
                                             </div>
                                         </div>
                                     </div>
@@ -123,7 +119,8 @@
         <div class="container px-5 my-5">
             <div class="text-center">
                 <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
-                <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="mailto:fadhlifadhlurrahman18@gmail.com">Contact me</a>
+                <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder"
+                    href="mailto:fadhlifadhlurrahman18@gmail.com">Contact me</a>
             </div>
         </div>
     </section>
