--- a/resume.html
+++ b/resume.html
@@ -141,12 +141,12 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-8 quicksand-regular">
+                                    <!-- <div class="col-lg-8 quicksand-regular">
                                         <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
                                             laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet
                                             officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro
                                             fuga.</div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
