PDF, Download Resume, Soft Skill
tambahin asset pdf biar bisa download cv sama tambahin soft skill

--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
                             <h2 class="text-primary fw-bolder mb-0">Experience</h2>
                             <!-- Download resume button-->
                             <!-- Note: Set the link href target to a PDF file within your project-->
-                            <a class="btn btn-primary px-4 py-3" href="#!">
+                            <a class="btn btn-primary px-4 py-3" href="./Assets/Muhammad Fadhlurrahman_CV.pdf">
                                 <div class="d-inline-block bi bi-download me-2"></div>
                                 Download Resume
                             </a>
@@ -182,6 +182,12 @@
                                                 Design</div>
                                         </div>
                                     </div>
+                                    <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                        <div class="col mb-4 mb-md-0">
+                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                                                Microsoft Office</div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <!-- Languages list-->
                                 <div class="mb-5">
@@ -209,17 +215,13 @@
                                     </div>
                                     <div class="row row-cols-1 row-cols-md-3">
                                         <div class="col mb-4 mb-md-0">
-                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Java
-                                            </div>
-                                        </div>
-                                        <div class="col mb-4 mb-md-0">
                                             <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
                                                 Bootstrap
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="mb-0">
+                                <div class="mb-5">
                                     <div class="d-flex align-items-center mb-4">
                                         <div
                                             class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
@@ -247,6 +249,46 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="mb-0">
+                                    <div class="d-flex align-items-center mb-4">
+                                        <div
+                                            class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
+                                            <i class="bi bi-person-arms-up"></i>
+                                        </div>
+                                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Soft
+                                                Skill</span>
+                                        </h3>
+                                    </div>
+                                    <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                        <div class="col mb-4 mb-md-0">
+                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                                                Attention to detail
+                                            </div>
+                                        </div>
+                                        <div class="col mb-4 mb-md-0">
+                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Problem
+                                                Solving
+                                            </div>
+                                        </div>
+                                        <div class="col">
+                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                                                Team Work
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                        <div class="col mb-4 mb-md-0">
+                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                                                Good Communication
+                                            </div>
+                                        </div>
+                                        <div class="col mb-4 mb-md-0">
+                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                                                Adaptable
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </section>
@@ -254,7 +296,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- footer -->
     <section id="footer">
         <div class="container">
