--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                                     <a class="nav-link p-2 text-white" href="projects.html">Projects</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link p-2 text-white" href="mailto:fadhlifadhlurrahman18@gmail.com">Contact</a>
+                                    <a class="nav-link p-2 text-white"
+                                        href="mailto:fadhlifadhlurrahman18@gmail.com">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -60,7 +61,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- About -->
     <section id="About">
         <div class="container px-5 py-5 my-5">
@@ -71,10 +72,12 @@
                         <span class="text-body-secondary">Muhammad Fadhlurrahman</span>
                     </h2>
                     <p class="lead quicksand-light">
-                        Hi!, My name is Muhammad Fadhlurrahman, you can call me fadhli.
-                        I'm an Information Systems graduate from Universitas Bakrie. I
-                        live in Indonesia and I love playing video games, especially FPS
-                        games.
+                        Hi! My name is Muhammad Fadhlurrahman, you can call me fadhli.
+                        I'm an Information Systems graduate from Universitas Bakrie. I currently
+                        live in Indonesia and I have a goal to become a professional programmer. and not only that, I
+                        also have a goal to be able to work abroad. My hobbies are playing video games, especially FPS
+                        games and reading comics. As a professional, I am proficient in programming languages ​​such as
+                        HTML, CSS and JavaScript. And I'm also proficient in UI/UX Designing.
                     </p>
                 </div>
                 <div class="col-md-5 d-flex align-items-center justify-content-center col-12 col-6 p-0">
@@ -90,7 +93,8 @@
             <footer class="py-3 my-4">
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                     <li class="nav-item">
-                        <a href="https://www.linkedin.com/in/fadhlurrahmanm/" class="nav-link px-2 text-body-secondary">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/fadhlurrahmanm/"
+                            class="nav-link px-2 text-body-secondary">LinkedIn</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://github.com/fadmuhammad" class="nav-link px-2 text-body-secondary">Github</a>
